kubernetes/multi/flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: flask
  name: flask
  namespace: aqra
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flask
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/network: 'true'
        io.kompose.service: flask
    spec:
      containers:
        - name: flask
          image: aqra_flask
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources: { }
          volumeMounts:
            - mountPath: /var/api
              name: flaskdata
      restartPolicy: Always
      serviceAccountName: ''
      volumes:
        - name: flaskdata
          persistentVolumeClaim:
            claimName: flaskdata-pv-claim
status: { }
