kubernetes/multi/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/network: 'true'
        io.kompose.service: mongo
    spec:
      containers:
        - name: mongo
          image: air_quality_mongo
          imagePullPolicy: Never
          ports:
            - containerPort: 27017
          resources: { }
          volumeMounts:
            - mountPath: /data/db
              name: mongodata
      restartPolicy: Always
      serviceAccountName: ''
      volumes:
        - name: mongodata
          persistentVolumeClaim:
            claimName: mongodata
status: { }
