kubernetes/multi/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 4
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/network: 'true'
        io.kompose.service: mongodb
    spec:
      containers:
        - name: mongodb
          image: air_quality_mongodb
          imagePullPolicy: Never
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongodbdata
      restartPolicy: Always
      serviceAccountName: ''
      volumes:
        - name: mongodbdata
          persistentVolumeClaim:
            claimName: mongodbdata
status: {}
