kubernetes/multi/nginx-deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.multi.yaml
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 4
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.multi.yaml
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /var/log/nginx
              name: nginxdata
      restartPolicy: Always
      volumes:
        - name: nginxdata
          persistentVolumeClaim:
            claimName: nginxdata
status: {}
