kubernetes/multi/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/network: 'true'
        io.kompose.service: nginx
    spec:
      containers:
        - name: nginx
          image: aqra_nginx
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources: { }
          volumeMounts:
            - mountPath: /var/log/nginx
              name: nginxdata
      restartPolicy: Always
      serviceAccountName: ''
      volumes:
        - name: nginxdata
          persistentVolumeClaim:
            claimName: nginxdata
status: { }
