kubernetes/multi/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.multi.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: flask
  name: flask
spec:
  ports:
    - name: '5000'
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: flask
status:
  loadBalancer: {}
