kubernetes/multi/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
  namespace: kube-system
spec:
  ports:
    - name: 27017
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: mongo
  type: ClusterIP
