kubernetes/multi/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.multi.yml
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: '5000'
      port: 5000
      targetPort: 80
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
