kubernetes/multi/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: '80'
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: nginx
  type: LoadBalancer
status:
  loadBalancer: { }
