kubernetes/multi/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - aqra.com
      secretName: nginx-tls
  rules:
    - host: aqra.com
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
