kubernetes/multi/resources.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: flask
  name: flask
  namespace: aqra
spec:
  ports:
    - name: flask
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: flask
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: nginx
  name: nginx
  namespace: aqra
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: flask
  name: flask
  namespace: aqra
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flask
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      labels:
        io.kompose.network/network: 'true'
        io.kompose.service: flask
    spec:
      containers:
        - envFrom:
            - secretRef:
                name:
                  flask-secret
          image: aqra_flask
          imagePullPolicy: Never
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /healthz/live
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 300
            timeoutSeconds: 60
          name: flask
          ports:
            - containerPort: 5000
          resources: { }
          volumeMounts:
            - mountPath: /var/api
              name: flaskdata
      serviceAccountName: ''
      volumes:
        - name: flaskdata
          persistentVolumeClaim:
            claimName: flaskdata-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: nginx
  name: nginx
  namespace: aqra
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      labels:
        io.kompose.network/network: 'true'
        io.kompose.service: nginx
    spec:
      containers:
        - image: aqra_nginx
          imagePullPolicy: Never
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /healthz/live
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 900
            timeoutSeconds: 60
          name: nginx
          ports:
            - containerPort: 80
          resources: { }
          volumeMounts:
            - mountPath: /var/log/nginx
              name: nginxdata
      serviceAccountName: ''
      volumes:
        - name: nginxdata
          persistentVolumeClaim:
            claimName: nginxdata-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: nginx-ingress
  namespace: aqra
spec:
  rules:
    - host: aqra.feit.ukim.edu.mk
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - aqra.feit.ukim.edu.mk
      secretName: aqra-tls
